--- a/style.css
+++ b/style.css
@@ -60,3 +60,20 @@ label {
 }
 
 
+/*@media only screen and (max-width: 768px) {
+	html {
+		width: 100%;
+	}
+}
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 992px;) {
+
+}
+
+@media (min-width: 1200px;) {
+
+}*/
