--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ label {
 	margin-bottom: 3%;
 	font-family: 'VT323', monospace;
 	font-size: xx-large;
+	letter-spacing: 20px;
 }
 
 .page-header {
